...
        android:text="Add a New Item"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_rounded_corner"
        android:gravity="center"
        android:hint="Enter an Item Name"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/DatePurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_rounded_corner"
        android:gravity="center"
...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/white_rounded_corner"
            android:gravity="center"
...
            android:translationY="20dp"
            app:srcCompat="@drawable/ic_camera_black" />

    </FrameLayout>

    <EditText
        android:id="@+id/ItemMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_rounded_corner"
        android:gravity="center"
        android:hint="Enter Make"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ItemModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_rounded_corner"
        android:gravity="center"
...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ItemSerial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/white_rounded_corner"
            android:gravity="center"
...
            android:translationY="20dp"
            app:srcCompat="@drawable/ic_camera_black" />

    </FrameLayout>

    <EditText
        android:id="@+id/EstimatedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/white_rounded_corner"
        android:gravity="center"
...
        android:layout_margin="16dp"
        android:background="@drawable/small_white_rounded_corner"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="Confirm" />


</LinearLayout>
