...

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#4F475D"
        app:title="Login"
        app:navigationIcon="@drawable/ic_login_back"/>



    <TextView
        android:layout_width="match_parent"
...
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_register_email" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Email"
                android:padding="10dp"
                android:textSize="20sp" />
...
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_register_password" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Password"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#1EB4B3"
            android:gravity="center"
...
