<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="13dp"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="3dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/tag_rounded_corner"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/tv_tag_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@android:color/transparent"
        android:text="test"
        android:textSize="25sp">
    </TextView>

    <ImageButton
        android:id="@+id/btn_tag_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/btn_tag_delete"
        android:src="@drawable/ic_tag_delete"
        android:textColor="@color/black"
        android:textSize="24sp">
    </ImageButton>

</LinearLayout>
